--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.7.2",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
@@ -32,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
