--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
         run: cd front-end/ && npm install --force
 
       - name: Run build
-        run: npm run build
+        run: cd front-end/ && npm run build
 
       - name: Check for errors in the build
         run: |
