--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,8 +29,8 @@ jobs:
 
             ssh-keyscan github.com > ~/.ssh/known_hosts
 
-            PROJECT_DIR="test_nextjs_actions"
-            REPO_URL="git@github.com:PharaEthan/$PROJECT_DIR.git"
+            PROJECT_DIR="OMGG-Website"
+            REPO_URL="git@github.com:EnzoGrn/$PROJECT_DIR.git"
 
             if [ ! -d "$PROJECT_DIR" ]; then
               echo "📁 Folder not found, cloning repository..."
