fix(build.yaml) try fixing build.yaml
Add OnPush rull to trigger action

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
       - dev
+  push:
+    branches:
+      - feature/issue-50/implement-strapi-backend-with-omgg-website
 
 jobs:
   build:
