--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,9 +24,9 @@ jobs:
       - name: Run build
         env:
           NEXT_PUBLIC_STRAPI_URL: ${{ secrets.NEXT_PUBLIC_STRAPI_URL }}
-          STRAPI_API_TOKEN: ${{ secrets.STRAPI_API_TOKEN }}
+          NEXT_PUBLIC_STRAPI_API_TOKEN: ${{ secrets.STRAPI_API_TOKEN }}
         run: | 
           cd front-end/
           echo "NEXT_PUBLIC_STRAPI_URL=${{ secrets.NEXT_PUBLIC_STRAPI_URL }}" >> .env
-          echo "STRAPI_API_TOKEN=${{ secrets.STRAPI_API_TOKEN }}" >> .env
+          echo "NEXT_PUBLIC_STRAPI_API_TOKEN=${{ secrets.STRAPI_API_TOKEN }}" >> .env
           npm run build
