feat(deploy.yml): improve deployment
Creating image instead of clonning the repo, add some env value for the dockerfile to build it on the VPS

--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -13,11 +13,19 @@ RUN npm install --force
 # Copy application source code
 COPY . .
 
+ARG PORT
+ARG NEXT_PUBLIC_STRAPI_URL
+ARG NEXT_PUBLIC_STRAPI_API_TOKEN
+
+ENV PORT=$PORT
+ENV NEXT_PUBLIC_STRAPI_URL=$NEXT_PUBLIC_STRAPI_URL
+ENV NEXT_PUBLIC_STRAPI_API_TOKEN=$NEXT_PUBLIC_STRAPI_API_TOKEN
+
 # Build the application
 RUN npm run build
 
 # Expose the application port
-EXPOSE 3000
+EXPOSE $PORT
 
 # Start the application
 CMD ["npm", "start"]
