--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,45 +8,31 @@ on:
 jobs:
 
   deploy:
+    name: Deploy to Server
     runs-on: ubuntu-latest
+    needs: build-and-push
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Connect to ssh and deploy
+      - name: Connect via SSH and deploy
         uses: appleboy/ssh-action@v1.0.3
+        env:
+          ENV_PATH: .env.prod
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          debug: true
           script: |
-            mkdir -p ~/.ssh
-            chmod 700 ~/.ssh
-
-            echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
-
-            ssh-keyscan github.com > ~/.ssh/known_hosts
-
-            PROJECT_DIR="OMGG-Website"
-            REPO_URL="git@github.com:EnzoGrn/$PROJECT_DIR.git"
-
-            if [ ! -d "$PROJECT_DIR" ]; then
-              echo "📁 Folder not found, cloning repository..."
-              git clone $REPO_URL || { echo "Cloning failed"; exit 1; }
-              cd $PROJECT_DIR
-            else
-              echo "📁 Folder found, pulling latest changes..."
-              cd $PROJECT_DIR
-              git pull origin main
-            fi
-
-            export NVM_DIR="$HOME/.nvm"
-            source "$NVM_DIR/nvm.sh"
+            cd /home/ubuntu/omgg-website
+            echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            # Pull the latest image
+            docker compose -f docker-compose.prod.yml pull
             
-            cd front-end
-
-            docker ps -a -q --filter "name=omgg-website" | grep -q . && docker stop omgg-website && docker rm omgg-website
-            docker build -t omgg-website .
-            docker run -d -p 3000:3000 --name omgg-website omgg-website
+            # Stop previous container
+            docker stop omgg-website || true
+            docker rm omgg-website || true
+            docker compose -f docker-compose.prod.yml down --remove-orphans
+            
+            # Remove unused images (without impacting volumes)
+            docker image prune -af
+            
+            # Restart services
+            docker compose --env-file ${{ env.ENV_PATH }} -f docker-compose.prod.yml up -d
