--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,6 +38,7 @@ jobs:
   deploy:
     name: Deploy to Server
     runs-on: ubuntu-latest
+    needs: build-and-push
     steps:
       - name: Connect via SSH and deploy
         uses: appleboy/ssh-action@v1.0.3
