fix(deploy.yaml): context path

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
+          context: ./front-end
           file: ./front-end/Dockerfile
           push: true
           tags: |
