--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -28,6 +30,12 @@ jobs:
           
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
+        env:
+          ENV_PATH: .env
+        args:
+          PORT: ${PORT}
+          NEXT_PUBLIC_STRAPI_URL: ${NEXT_PUBLIC_STRAPI_URL}
+          NEXT_PUBLIC_STRAPI_API_TOKEN: ${NEXT_PUBLIC_STRAPI_API_TOKEN}
         with:
           context: ./front-end
           file: ./front-end/Dockerfile
