--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,11 +15,14 @@ jobs:
       packages: write
     env:
       IMAGE_NAME: ghcr.io/enzogrn/omgg-website
+    env_file: ./front-end/.env
+    args:
+      PORT: ${PORT}
+      NEXT_PUBLIC_STRAPI_URL: ${NEXT_PUBLIC_STRAPI_URL}
+      NEXT_PUBLIC_STRAPI_API_TOKEN: ${NEXT_PUBLIC_STRAPI_API_TOKEN}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -30,12 +33,6 @@ jobs:
           
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
-        env:
-          ENV_PATH: .env
-        args:
-          PORT: ${PORT}
-          NEXT_PUBLIC_STRAPI_URL: ${NEXT_PUBLIC_STRAPI_URL}
-          NEXT_PUBLIC_STRAPI_API_TOKEN: ${NEXT_PUBLIC_STRAPI_API_TOKEN}
         with:
           context: ./front-end
           file: ./front-end/Dockerfile
