--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -13,11 +13,11 @@ RUN npm install --force
 # Copy application source code
 COPY . .
 
-ARG PORT
+# ARG PORT
 ARG NEXT_PUBLIC_STRAPI_URL
 ARG NEXT_PUBLIC_STRAPI_API_TOKEN
 
-ENV PORT=$PORT
+# ENV PORT=$PORT
 ENV NEXT_PUBLIC_STRAPI_URL=$NEXT_PUBLIC_STRAPI_URL
 ENV NEXT_PUBLIC_STRAPI_API_TOKEN=$NEXT_PUBLIC_STRAPI_API_TOKEN
 
@@ -25,7 +25,7 @@ ENV NEXT_PUBLIC_STRAPI_API_TOKEN=$NEXT_PUBLIC_STRAPI_API_TOKEN
 RUN npm run build
 
 # Expose the application port
-EXPOSE $PORT
+EXPOSE 3000
 
 # Start the application
 CMD ["npm", "start"]
