--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,11 +28,13 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
